--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "signal-app",
   "version": "0.1.0",
+  "homepage": ".",
   "dependencies": {
     "classnames": "^2.3.2",
     "normalize.css": "^8.0.1",
@@ -8,6 +9,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
